--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV_RomanencoSergiu</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@200&display=swap" rel="stylesheet">
     <style>
         *{
             margin: 0;
@@ -159,8 +161,8 @@
             <!--Name and image-->
             <div class="numePrenume">
                 <div class="name">
-                    <p class="prgNume">Romanenco Sergiu</p>
-                    <p style="color: white; font-size: 20px;">Front End Developer</p>
+                    <p class="prgNume" style="font-family: 'Noto Sans', sans-serif; font-weight: 900;">Romanenco Sergiu</p>
+                    <p style="color: white; font-size: 20px; font-family: 'Noto Sans', sans-serif;">Front End Developer</p>
                 </div>
                 <div class="myPhoto">
                     <div class="div-img"></div>
