--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                         <p><i class="fa-solid fa-circle-dot" style="font-size: 13px;"></i>&nbsp; Student at the Azimut Vision - Accredited IT Courses</p>
                         <p style="color: rgb(76, 76, 76);">Nov 2022 - Apr 2023</p>
                     </div>
-                    <p style="padding: 10px 15px 0px 15px;">- During the courses, I put HTML/CSS properties into practice, creating modern elements for websites, I solved logic exercises in JavaScript, created different animations with GSAP, also made web pages, using new properties, animations, transitions for a modern design.</p>
+                    <p style="padding: 10px 15px 0px 15px;">- During the courses, I put HTML/CSS properties into practice, creating modern elements for websites, learned and can work well with responsive design, I solved logic exercises in JavaScript, created different animations with GSAP, also made web pages, using new properties, animations, transitions for a modern design.</p>
                 </div>
                 <h3 style="padding: 20px 0px 10px 10px;">Interests</h3>
                 <div class="description_item">
