--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <div class="numePrenume">
                 <div class="name">
                     <p class="prgNume" style="font-family: 'Noto Sans', sans-serif; font-weight: 900;">Romanenco Sergiu</p>
-                    <p style="color: white; font-size: 20px; font-family: 'Noto Sans', sans-serif;">Front End Developer</p>
+                    <p style="color: white; font-size: 20px; font-family: 'Noto Sans', sans-serif;">Frontend Web Developer</p>
                 </div>
                 <div class="myPhoto">
                     <div class="div-img"></div>
