--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
                         <i class="fa-solid fa-earth-americas" style="font-size: 12px;"></i>
                         <a href="https://sergiuromanenco.github.io/eyebrows.github.io/Home/indexHome" target="_blank">https://eyebrows.github.io</a>
                     </p>
-                    <p style="padding: 0px 0px 6px 6px;">
+                    <p style="padding: 6px 0px 6px 6px;">
                         <i class="fa-solid fa-earth-americas" style="font-size: 12px;"></i>
-                        <a href="https://sergiuromanenco.github.io/myFirstProject.github.io/" target="_blank">https://myFirstProject.github.io</a>
+                        <a href="https://sergiuromanenco.github.io/firstProject.github.io/" target="_blank">https://myFirstProject.github.io</a>
                     </p>
                 </div>
                 <div class="interests"></div>
