--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     </p>
                     <p style="padding: 6px 0px 6px 6px;">
                         <i class="fa-solid fa-earth-americas" style="font-size: 12px;"></i>
-                        <a href="https://sergiuromanenco.github.io/firstProject.github.io/" target="_blank">https://myFirstProject.github.io</a>
+                        <a href="https://sergiuromanenco.github.io/myFirstProject.github.io/" target="_blank">https://firstProject.github.io</a>
                     </p>
                 </div>
                 <div class="interests"></div>
