--- a/index.html
+++ b/index.html
@@ -183,11 +183,12 @@
                     <h3><i class="fa-solid fa-earth-americas"></i>&nbsp;&nbsp; Languages</h3>
                     <ul style="padding: 15px 0px 20px 30px">
                         <li type="disc">English - B1 Intermediate</li>
+                        <li type="disc">Romanian - native</li>
                         <li type="disc">Russian - native</li>
                     </ul>
                 </div>
                 <div class="skills">
-                    <h3 style="padding-bottom: 15px;"><i class="fa fa-asterisk fa-fw"></i>&nbsp;&nbsp; Technical Skills</h3>
+                    <h3 style="padding-bottom: 15px;"><i class="fa fa-asterisk fa-fw"></i>&nbsp;&nbsp; Soft Skills</h3>
                     <p>HTML</p>
                     <div class="progress">
                         <div class="html">95%</div>
@@ -211,7 +212,6 @@
                         <li>Visual Studio Code 2022</li>
                         <li>Eclipse IDE</li>
                         <li>Notepad++</li>
-                        <li>GitHub</li>
                     </ul>
                 </div>
                 <div class="myProjects">
@@ -255,7 +255,7 @@
                     </div>
                     <p style="padding: 5px 0px 0px 22px;"><b>Speciality:</b> Front-End Developer</p>
                 </div>
-                <h3 style="padding: 20px 0px 10px 10px;">Soft Skills</h3>
+                <h3 style="padding: 20px 0px 10px 10px;">Abilities</h3>
                 <div class="description_item">
                     <ul>
                         <li>Learn fast</li>
