--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
         .javascript{
             width: 170px;
         }
+        .github{
+            width: 165px;
+        }
         .photoshop{
             width: 160px;
         }
@@ -200,6 +203,10 @@
                     <p style="padding-top: 10px;">JavaScript</p>
                     <div class="progress">
                         <div class="html javascript">85%</div>
+                    </div>
+                    <p style="padding-top: 10px;">GitHub</p>
+                    <div class="progress">
+                        <div class="html github">80%</div>
                     </div>
                     <p style="padding-top: 10px;">Adobe Photoshop</p>
                     <div class="progress">
