--- a/index.html
+++ b/index.html
@@ -192,17 +192,17 @@
                 </div>
                 <div class="skills">
                     <h3 style="padding-bottom: 15px;"><i class="fa fa-asterisk fa-fw"></i>&nbsp;&nbsp; Soft Skills</h3>
-                    <p>HTML</p>
+                    <p>JavaScript</p>
+                    <div class="progress">
+                        <div class="html javascript">85%</div>
+                    </div>
+                    <p style="padding-top: 10px;">HTML</p>
                     <div class="progress">
                         <div class="html">95%</div>
                     </div>
                     <p style="padding-top: 10px;">CSS</p>
                     <div class="progress">
                         <div class="html css">90%</div>
-                    </div>
-                    <p style="padding-top: 10px;">JavaScript</p>
-                    <div class="progress">
-                        <div class="html javascript">85%</div>
                     </div>
                     <p style="padding-top: 10px;">GitHub</p>
                     <div class="progress">
@@ -231,7 +231,7 @@
                         <i class="fa-solid fa-earth-americas" style="font-size: 12px;"></i>
                         <a href="https://sergiuromanenco.github.io/eyebrows.github.io/Home/indexHome" target="_blank">https://eyebrows.github.io</a>
                     </p>
-                    <p style="padding: 6px 0px 6px 6px;">
+                    <p style="padding: 6px 0px 0px 6px;">
                         <i class="fa-solid fa-earth-americas" style="font-size: 12px;"></i>
                         <a href="https://sergiuromanenco.github.io/myFirstProject.github.io/" target="_blank">https://firstProject.github.io</a>
                     </p>
