--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <p><i class="fa-solid fa-location-dot"></i>&nbsp; Iași, Romania</p>
                     <p><i class="fa-solid fa-phone"></i>&nbsp; +40 738 245 363</p>
                     <p><i class="fa-brands fa-telegram"></i>&nbsp; <a href="https://t.me/sergiu_r02" target="_blank" style="color: #fff; text-decoration: none;">@sergiu_r02</a></p>
-                    <p><i class="fa-solid fa-envelope"></i>&nbsp; <a href="" style="color: #fff; text-decoration: none;">romanenco.sergiu@mail.ru</a></p>
+                    <p><i class="fa-solid fa-envelope"></i>&nbsp; <a href="#" style="color: #fff; text-decoration: none;">romanenco.sergiu02@gmail.com</a></p>
                     <p><i class="fa-brands fa-github"></i>&nbsp; <a href="https://github.com/SergiuRomanenco" target="_blank" style="color: #fff; text-decoration: none; border-bottom: 1px solid #fff;">sergiuromanenco_GitHub</a></p>
                     <p><i class="fa-brands fa-linkedin"></i>&nbsp; <a href="https://www.linkedin.com/in/sergiu-romanenco-505724269/" target="_blank" style="color: #fff; text-decoration: none; border-bottom: 1px solid #fff;">SergiuRomanenco</a></p>
                 </div>
