--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
                     <p><i class="fa-solid fa-location-dot"></i>&nbsp; Iași, Romania</p>
                     <p><i class="fa-solid fa-phone"></i>&nbsp; +40 738 245 363</p>
                     <p><i class="fa-brands fa-telegram"></i>&nbsp; <a href="https://t.me/sergiu_r02" target="_blank" style="color: #fff; text-decoration: none;">@sergiu_r02</a></p>
-                    <p><i class="fa-solid fa-envelope"></i>&nbsp; <a href="#" style="color: #fff; text-decoration: none;">romanenco.sergiu02@gmail.com</a></p>
                     <p><i class="fa-brands fa-github"></i>&nbsp; <a href="https://github.com/SergiuRomanenco" target="_blank" style="color: #fff; text-decoration: none; border-bottom: 1px solid #fff;">sergiuromanenco_GitHub</a></p>
                     <p><i class="fa-brands fa-linkedin"></i>&nbsp; <a href="https://www.linkedin.com/in/sergiu-romanenco-505724269/" target="_blank" style="color: #fff; text-decoration: none; border-bottom: 1px solid #fff;">SergiuRomanenco</a></p>
+                    <p><a href="#" style="color: #fff; text-decoration: none;">romanenco.sergiu02@gmail.com</a></p>
                 </div>
                 <div class="languages">
                     <h3><i class="fa-solid fa-earth-americas"></i>&nbsp;&nbsp; Languages</h3>
@@ -266,7 +266,7 @@
                  <h3 style="padding: 15px 0px 10px 10px;">Certificates</h3>
                 <div class="description_item">
                     <div style="display: flex; justify-content: space-between;">
-                        <p><i class="fa-solid fa-circle-dot" style="font-size: 13px;"></i>&nbsp; Certificate for the 100 hours Front-End Developer Program conducted by Azimut Vision (2023)</p>
+                        <p><i class="fa-solid fa-circle-dot" style="font-size: 13px;"></i>&nbsp; Certificate for the 100 hours Front-End Developer Program conducted by <span style="padding-left: 15px;">Azimut Vision (2023)<span></p>
                     </div>
                 </div>
                 
