--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         .javascript{
             width: 173px;
         }
-        .github{
-            width: 167px;
+        .reactNative{
+            width: 147px;
         }
         .photoshop{
             width: 162px;
@@ -204,9 +204,9 @@
                     <div class="progress">
                         <div class="html css">90%</div>
                     </div>
-                    <p style="padding-top: 10px;">GitHub</p>
+                    <p style="padding-top: 10px;">React Native</p>
                     <div class="progress">
-                        <div class="html github">80%</div>
+                        <div class="html reactNative">70%</div>
                     </div>
                     <p style="padding-top: 10px;">Adobe Photoshop</p>
                     <div class="progress">
@@ -233,7 +233,7 @@
                     </p>
                     <p style="padding: 6px 0px 0px 6px;">
                         <i class="fa-solid fa-earth-americas" style="font-size: 12px;"></i>
-                        <a href="https://sergiuromanenco.github.io/myFirstProject.github.io/" target="_blank">https://firstProject.github.io</a>
+                        <a href="https://sergiuromanenco.github.io/3D-parallax/" target="_blank">https://firstProject.github.io</a>
                     </p>
                 </div>
                 <div class="interests"></div>
