--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     </p>
                     <p style="padding: 6px 0px 0px 6px;">
                         <i class="fa-solid fa-earth-americas" style="font-size: 12px;"></i>
-                        <a href="https://sergiuromanenco.github.io/3D-parallax/" target="_blank">https://3D-parallax.github.io</a>
+                        <a href="https://sergiuromanenco.github.io/3D-parallax/" target="_blank">https://3Dparallax.github.io</a>
                     </p>
                 </div>
                 <div class="interests"></div>
