--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         .cv{
             display: flex;
             width: 800px;
-            height: 1200px;
+            height: 1250px;
         }
 
         .details{
@@ -120,10 +120,10 @@
             width: 173px;
         }
         .reactNative{
-            width: 147px;
+            width: 169px;
         }
         .photoshop{
-            width: 162px;
+            width: 155px;
         }
 
         .tools{
@@ -206,11 +206,11 @@
                     </div>
                     <p style="padding-top: 10px;">React Native</p>
                     <div class="progress">
-                        <div class="html reactNative">70%</div>
+                        <div class="html reactNative">80%</div>
                     </div>
                     <p style="padding-top: 10px;">Adobe Photoshop</p>
                     <div class="progress">
-                        <div class="html photoshop">75%</div>
+                        <div class="html photoshop">70%</div>
                     </div>
                 </div>
                 <div class="tools">
@@ -242,7 +242,7 @@
             <div class="description">
                 <h3 style="padding: 0px 0px 10px 10px;">Objective</h3>
                 <div class="description_item">
-                    <p>A junior FrontEnd Developer dedicated and oriented in the creation, improvement and development interactive websites, in a dynamic and challenging work environment.</p>
+                    <p>A junior FrontEnd Developer dedicated and oriented in the creation, improvement and development interactive websites and applications, in a dynamic and challenging work environment.</p>
                 </div>
                 <h3 style="padding: 20px 0px 10px 10px;">Education</h3>
                 <div class="description_item">
@@ -251,7 +251,8 @@
                         <p style="color: rgb(76, 76, 76);">2021 - present</p>
                     </div>
                     <p style="padding: 5px 0px 0px 22px; max-width: 400px;"><b>Faculty:</b> Electrical Engineering, Energetics and Applied Informatics</p>
-                    <p style="padding: 5px 0px 0px 22px; max-width: 400px;"><b>Speciality:</b> Electrical engineering</p>
+                    <p style="padding: 5px 0px 0px 22px; max-width: 400px;"><b>Domain:</b> Electrical engineering</p>
+                    <p style="padding: 5px 0px 0px 22px; max-width: 400px;"><b>Specialization:</b> Instrumentation and Data Acquisition</p>
                     <p style="padding: 5px 0px 0px 22px; max-width: 400px;">3nd year license</p>
                 </div>
                 <h3 style="padding: 15px 0px 10px 10px;">Courses</h3>
@@ -290,7 +291,12 @@
                         <p><i class="fa-solid fa-circle-dot" style="font-size: 13px;"></i>&nbsp; Student at the Azimut Vision - Accredited IT Courses</p>
                         <p style="color: rgb(76, 76, 76);">Nov 2022 - Apr 2023</p>
                     </div>
-                    <p style="padding: 10px 15px 0px 15px;">- During the courses, I put HTML/CSS properties into practice, creating modern elements for websites, learned and can work well with responsive design, I solved logic exercises in JavaScript, created different animations with GSAP, also made web pages, using new properties, animations, transitions for a modern design.</p>
+                    <p style="padding: 10px 15px 0px 15px;">- During the courses, I put HTML/CSS properties into practice, creating modern elements for websites, learned and can work well with responsive design, I solved logic exercises in JavaScript, and created different animations.</p>
+                    <div style="display: flex; justify-content: space-between; margin-top: 8px;">
+                        <p><i class="fa-solid fa-circle-dot" style="font-size: 13px;"></i>&nbsp; Freelance App Developments</p>
+                        <p style="color: rgb(76, 76, 76);">Aug 2022 - Present</p>
+                    </div>
+                    <p style="padding: 10px 15px 0px 15px;">I learned to create React Native applications with EXPO use TypeScript, and I rely on a good structure and encapsulation in the code.</p>
                 </div>
                 <h3 style="padding: 20px 0px 10px 10px;">Interests</h3>
                 <div class="description_item">
